Kustomize/base/np-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
