Kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 8080
